CAY-1856 Expression.expWithParameters does not work when parameters are placed in the inline collection 
CAY-1860 In-memory matching of DataObjects against ObjectId or int
CAY-1861 Remove runtime relationships
CAY-1882 Porting to OSGi environment
CAY-1883 Clean up Cayenne maven structure
CAY-1886 cayenne-di module reorg, new exceptions
CAY-1890 Remove Cayenne-level buffering when retrieving LOBs

Bug Fixes:

CAY-1695 Unexpected null value in bidirectional one-to-one prefetch 
CAY-1736 IllegalArgumentException when synchronizing entities in the Modeler
CAY-1818 Fix copyright year in the Modeler "about" panel
CAY-1834 Exception: ToManyList cannot be cast to DataObject 
CAY-1857 Problem with hotkeys 
CAY-1859 NullPointerException when importing EOModel 
CAY-1866 Change in General Modeler Preferences reverts old settings to default value
CAY-1869 ResultIterator from cayenne-client dependency is subclassed from org.apache.cayenne.access.ResultIterator which is present only in cayenne-server dependency 
CAY-1874 DB2 Procedure action ignores the first result set
CAY-1798 ROP: Reverse relationships of prefetched entity objects are not filled during server to client objects conversion
CAY-1797 NPE importing DataMap
CAY-1880 objectStore snapshots never cleared from RefreshQuery when "use shared cache" unchecked
CAY-1881 CayenneModeler (Mac version) doesn't work with Java 7

----------------------------------
Release: 3.2M1
Date: 
----------------------------------
Changes/New Features:

CAY-1294 Generify query
CAY-1646 Synchronize tabs in Modeler between ObjEntity and DbEntity editor panes
CAY-1647 Easily switch to/from ObjEntity and DbEntity in Modeler
CAY-1717 [PATCH] Implement JDBC compatibility layer methods
CAY-1718 Remove everything deprecated in 3.1
CAY-1724 Add 'Property' class for easier and better Expression creation
CAY-1726 Expression parser support for bit operators, support for << and >>